# ros_host

./: .gitignore  AGENTS.md  README.md  all_start.sh  camera_show  listener  pyproject.toml  requirements.txt  sender  start  start_asr.sh  start_bridge.sh  start_event_listener.sh  start_llm.sh  start_player.sh  start_tts.sh
src/audio_base/: asr_gemma_node.py  asr_node.py  capture_node.py  player_node.py  setup.py  tts_node.py
src/audio_base/audio_base/: asr_node.py  player_node.py  tts_node.py
src/hub/: server.py
src/llm_support/: llm_node.py  package.xml  setup.cfg  setup.py
src/llm_support/llm_support/: llm_node.py
src/messages/: base.py  image.py
src/tools/: camera_listener.py  listener.py  rpc_square_client.py  rpc_square_server.py  sender.py
